minor rework, display on small devices needs to be fixed

--- a/css/news.css
+++ b/css/news.css
@@ -103,7 +103,7 @@ div[class^="readmorebox"] > div {
   max-width: 1000px;
   min-height: 100px;
   vertical-align: middle;
-  width: 60%;
+  width: 95%;
   position: relative;
   border-radius: 8px;
   padding: 5px 30px;
@@ -131,8 +131,12 @@ div[class^="readmorebox"] [class^="popupCloseButton"]:hover {
 }
 /* Popup box END */
 
-@media (max-width: 1000px) {
-  div[class^="readmorebox"] > div {
-    width: 95%;
+/* @media (max-width: 1100px) {
+  div[class^="readmorebox"] > div,
+  div[class^="readmorebox"] .helper {
+    width: 75%;
+    max-width: 900px;
+    vertical-align: middle;
+    margin: 0;
   }
-}
+} */
